--- a/SweetAndSavory/Views/Treats/Details.cshtml
+++ b/SweetAndSavory/Views/Treats/Details.cshtml
@@ -16,7 +16,7 @@ else
   <ul>
   @foreach (var join in Model.JoinEntities)
     {
-      <li>@join.Flavor.Name</li>
+      <h5>@Html.ActionLink($"{join.Flavor.Name}", "Details","Flavors", new { id = join.Flavor.FlavorId })</h5>
       @using (Html.BeginForm("DeleteFlavor", "Treats"))
       {
         @Html.Hidden("joinId", @join.FlavorTreatId)
