--- a/SweetAndSavory/Views/Flavors/AddTreat.cshtml
+++ b/SweetAndSavory/Views/Flavors/AddTreat.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model SweetAndSavory.Models.Item
+@model SweetAndSavory.Models.Flavor
 
 <h2>Add a treat to @Html.DisplayFor(model => model.Name)</h2>
 
