--- a/SweetAndSavory/Views/Treats/Edit.cshtml
+++ b/SweetAndSavory/Views/Treats/Edit.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model SweetAndSavory.Models.Item
+@model SweetAndSavory.Models.Treat
 
 <h2>Edit @Html.DisplayFor(model => model.Name)</h2>
 
