--- a/SweetAndSavory/Views/Treats/Details.cshtml
+++ b/SweetAndSavory/Views/Treats/Details.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Treat
+@model SweetAndSavory.Models.Treat
 
 <h2><span class="underLine">Details for @Html.DisplayFor(model => model.Name)</span></h2>
 
