--- a/SweetAndSavory/Views/Flavors/Index.cshtml
+++ b/SweetAndSavory/Views/Flavors/Index.cshtml
@@ -18,5 +18,7 @@
   }
 </ul>
 
-<p>@Html.ActionLink("Add New Flavor", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<div class="flex">
+  @Html.ActionLink("Add New Flavor", "Create", "Flavors", null, new {@class = "btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-outline-dark"})
+</div>
