--- a/SweetAndSavory/Views/Account/Index.cshtml
+++ b/SweetAndSavory/Views/Account/Index.cshtml
@@ -11,12 +11,14 @@
   <p>Hello @User.Identity.Name!</p>
   @using (Html.BeginForm("LogOff", "Account"))
   {
-    <input type="submit" class="btn btn-default" value="Log out" />
+    <input type="submit" class="btn btn-outline-dark" value="Log out" />
   }
 }
 else
 {
-  <p>@Html.ActionLink("Register", "Register")</p>
-  <p>@Html.ActionLink("Log in", "Login")</p>
-  <p>@Html.ActionLink("Home", "Index", "Home")</p>
+  <div class="flex">
+  @Html.ActionLink("Register", "Register", "Account", null, new {@class="btn btn-outline-dark"})
+  @Html.ActionLink("Log in", "Login", "Account", null, new {@class="btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class="btn btn-outline-dark"})
+</div>
 }
