--- a/SweetAndSavory/Views/Account/Login.cshtml
+++ b/SweetAndSavory/Views/Account/Login.cshtml
@@ -6,15 +6,15 @@
 
 @model LoginViewModel
 
-<h2>Log in with your account</h2>
+<h2>Log In With Your Account</h2>
 <hr />
 @using (Html.BeginForm())
 {
   @Html.LabelFor(m => m.Email)
-  @Html.TextBoxFor(m => m.Email, new {required = "required"})
+  @Html.TextBoxFor(m => m.Email, new {@class="form-control", required = "required"})
 
   @Html.LabelFor(m => m.Password)
-  @Html.PasswordFor(m => m.Password, new {required = "required"})
+  @Html.PasswordFor(m => m.Password, new {@class="form-control", required = "required"})
 
-  <input type="submit" value="Log in" class="btn btn-default" />
+  <input type="submit" value="Log in" class="btn btn-outline-dark" />
 }
