--- a/SweetAndSavory/Views/Account/Login.cshtml
+++ b/SweetAndSavory/Views/Account/Login.cshtml
@@ -16,5 +16,9 @@
   @Html.LabelFor(m => m.Password)
   @Html.PasswordFor(m => m.Password, new {@class="form-control", required = "required"})
 
-  <input type="submit" value="Log in" class="btn btn-outline-dark" />
+  <input type="submit" value="Log in" class="btn btn-outline-primary" style="margin-bottom: 5px;" />
 }
+
+@* <div class="flex"> *@
+@Html.ActionLink("Register", "Register", "Account", null, new { @class = "btn btn-outline-primary"})
+@* </div> *@
