--- a/SweetAndSavory/Views/Account/Login.cshtml
+++ b/SweetAndSavory/Views/Account/Login.cshtml
@@ -19,6 +19,6 @@
   <input type="submit" value="Log in" class="btn btn-outline-primary" style="margin-bottom: 5px;" />
 }
 
-@* <div class="flex"> *@
-@Html.ActionLink("Register", "Register", "Account", null, new { @class = "btn btn-outline-primary"})
-@* </div> *@
+<hr style="margin-top: 25%" />
+Don't Have an Account?
+@Html.ActionLink("Register Here", "Register", "Account", null, new { @class = "btn btn-outline-primary"})
