--- a/SweetAndSavory/Views/Treats/Create.cshtml
+++ b/SweetAndSavory/Views/Treats/Create.cshtml
@@ -9,11 +9,14 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name, new {required = "required"})
+  @Html.TextBoxFor(model => model.Name, new {@class="form-control", required = "required"})
 
-  @Html.Label("Select flavor")
-  @Html.DropDownList("CategoryId", "-select-")
+  @Html.Label("Select Flavor")
+  @Html.DropDownList("FlavorId", "-select-")
 
   <input type="submit" value="Add New Treat" class="btn btn-outline-success" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p>
+<div class="flex">
+  @Html.ActionLink("Show All Treats", "Index", "Treats", null, new {@class = "btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-outline-dark"})
+</div>
