--- a/SweetAndSavory/Views/Treats/Details.cshtml
+++ b/SweetAndSavory/Views/Treats/Details.cshtml
@@ -26,3 +26,13 @@ else
     }
   </ul>
 }
+
+<div class="flex">
+  @Html.ActionLink("Add A Flavor", "AddFlavor", new { id = Model.TreatId }, new { @class = "btn btn-outline-dark"})
+  @Html.ActionLink($"Edit {Model.Name}", "Edit", "Treats", new {id = Model.TreatId}, new { @class = "btn btn-outline-dark" })
+  @Html.ActionLink($"Delete {Model.Name}", "Delete", "Treats", new {id = Model.TreatId}, new {@class = "btn btn-outline-dark"})
+</div>
+<div class="flex">
+  @Html.ActionLink("Show All Treats", "Index", "Treats", null, new {@class = "btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-outline-dark"})
+  </div>
