--- a/SweetAndSavory/Views/Treats/Edit.cshtml
+++ b/SweetAndSavory/Views/Treats/Edit.cshtml
@@ -13,10 +13,10 @@
   @Html.LabelFor(model => model.Name)
   @Html.EditorFor(model => model.Name)
 
-  @* @Html.Label("Select flavor")
-  @Html.DropDownList("FlavorId", "-select-") *@
-
   <input type="submit" value="Save" class="btn btn-outline-primary" />
 }
 
-<p>@Html.ActionLink("View All Treats", "Index")</p>
+<div class="flex">
+  @Html.ActionLink("Back to Treats", "Index", "Treats", null, new { @class = "btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-outline-dark"})
+</div>
