--- a/SweetAndSavory/Views/Flavors/Create.cshtml
+++ b/SweetAndSavory/Views/Flavors/Create.cshtml
@@ -8,7 +8,10 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
+  @Html.TextBoxFor(model => model.Name, new {@class="form-control", required = "required"})
   <input type="submit" value="Add New Flavor" class="btn btn-outline-success" />
 }
-<p>@Html.ActionLink("Show All Flavors", "Index")</p>
+<div class="flex">
+  @Html.ActionLink("Show All Flavors", "Index", "Flavors", null, new {@class = "btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-outline-dark"})
+</div>
