--- a/SweetAndSavory/Views/Treats/Delete.cshtml
+++ b/SweetAndSavory/Views/Treats/Delete.cshtml
@@ -10,4 +10,7 @@
 {
   <input type="submit" value="Delete" class="btn btn-outline-danger" />
 }
-@Html.ActionLink("View All Treats", "Index")
+<div class="flex">
+  @Html.ActionLink("Back to Treats", "Index", "Treats", null, new { @class = "btn btn-outline-dark"})
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-outline-dark"})
+</div>
