--- a/SweetAndSavory/Views/Treats/Edit.cshtml
+++ b/SweetAndSavory/Views/Treats/Edit.cshtml
@@ -11,7 +11,7 @@
   @Html.HiddenFor(model => model.TreatId)
 
   @Html.LabelFor(model => model.Name)
-  @Html.EditorFor(model => model.Name)
+  @Html.TextBoxFor(model => model.Name, new {@class="form-control", required = "required", placeholder = $"{Model.Name}"})
 
   <input type="submit" value="Save" class="btn btn-outline-primary" />
 }
