WIP: Continue work on button styling. Prepare for push

--- a/SweetAndSavory/Views/Account/Login.cshtml
+++ b/SweetAndSavory/Views/Account/Login.cshtml
@@ -22,3 +22,6 @@
 <hr style="margin-top: 25%" />
 Don't Have an Account?
 @Html.ActionLink("Register Here", "Register", "Account", null, new { @class = "btn btn-outline-primary"})
+<div class="flex">
+  @Html.ActionLink("Home", "Index", "Home", null, new {@class = "btn btn-outline-dark", style="margin-top: 10px"})
+</div>
