--- a/SweetAndSavory/Views/Home/Index.cshtml
+++ b/SweetAndSavory/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
 <div class="flex">
   @Html.ActionLink("See All Flavors", "Index", "Flavors", null, new { @class = "btn btn-outline-dark"})
   @Html.ActionLink("See All Treats", "Index", "Treats", null, new { @class = "btn btn-outline-dark"})
-  @Html.ActionLink("Create An Account", "Index", "Account", null, new {@class = "btn btn-outline-dark"})
+  @Html.ActionLink("Account Home", "Index", "Account", null, new {@class = "btn btn-outline-dark"})
 </div>
