--- a/SweetAndSavory/Views/Flavors/AddTreat.cshtml
+++ b/SweetAndSavory/Views/Flavors/AddTreat.cshtml
@@ -4,7 +4,7 @@
 
 @model SweetAndSavory.Models.Flavor
 
-<h2>Add a treat to @Html.DisplayFor(model => model.Name)</h2>
+<h2>Add A Treat To @Html.DisplayFor(model => model.Name)</h2>
 
 @using (Html.BeginForm())
 {
